--- a/index.html
+++ b/index.html
@@ -7,55 +7,21 @@
     <title>Lakwa Hospital Obra - लकवा अस्पताल, डॉ. चंदन कुमार | Obra Aurangabad Bihar</title>
 
     <!-- BASIC SEO -->
-    <meta name="description" content="Lakwa Hospital Obra, Dr. Chandan Kumar - लकवा, पक्षाघात, न्यूरो समस्या, चक्कर आना, नसों की कमजोरी, हाथ-पैर सुन्न होना आदि का विशेषज्ञ उपचार। Obra Aurangabad Bihar का भरोसेमंद अस्पताल।" />
-    <meta name="keywords" content="Lakwa Hospital Obra, लकवा अस्पताल, Dr Chandan Kumar Obra, paralysis treatment Obra, neuro hospital Obra Aurangabad Bihar, नसों का इलाज, लकवा का इलाज" />
+    <meta name="description" content="Lakwa Hospital Obra, Dr. Chandan Kumar - लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, दर्द आदि का आधुनिक एवं विशेषज्ञ उपचार। 24 घंटे आपातकालीन सेवा।" />
+    <meta name="keywords" content="Lakwa Hospital Obra, लकवा अस्पताल, Dr Chandan Kumar, paralysis treatment Obra, neuro hospital Obra" />
     <meta name="robots" content="index, follow" />
 
-    <!-- JSON-LD SCHEMA -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "MedicalClinic",
-        "name": "Lakwa Hospital - Dr. Chandan Kumar",
-        "image": "doctorphoto.png",
-        "logo": "doctorphoto.png",
-        "url": "https://princekumarobra.github.io/Lakwa-Hospital/",
-        "telephone": "+91-9771737437",
-        "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "अशोक कॉलोनी के ठीक सामने, NH-139, नवजीवन पानी टंकी, ओबरा",
-            "addressLocality": "Obra",
-            "addressRegion": "Bihar",
-            "postalCode": "824124",
-            "addressCountry": "IN"
-        },
-        "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": 24.74,
-            "longitude": 84.38
-        },
-        "medicalSpecialty": "Neurology"
-    }
-    </script>
-
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <!-- GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
 
     <!-- JS -->
     <script defer src="main.js"></script>
-
 </head>
 
 <body>
-
-<!-- TOP BAR -->
-<div class="top-bar">
-    <span>लकवा अस्पताल, ओबरा - औरंगाबाद, बिहार</span>
-    <span>📞 24×7 आपातकालीन सेवा उपलब्ध</span>
-</div>
 
 <!-- HEADER -->
 <header>
@@ -68,9 +34,9 @@
     </div>
 
     <div class="header-right">
-        <div class="header-contact">
-            <span class="header-label">आपातकालीन सहायता:</span>
-            <a href="tel:+919771737437" class="header-phone">+91 97717 37437</a>
+        <div>
+            <span>आपातकालीन संपर्क:</span>
+            <a href="tel:+919771737437" class="highlight-phone">+91 97717 37437</a>
         </div>
 
         <button class="btn-call-header" onclick="callNow()">📞 अभी कॉल करें</button>
@@ -86,38 +52,25 @@
             <img src="doctorphoto.png" alt="डॉ. चंदन कुमार - Lakwa Hospital Obra" class="doctor-photo" />
         </div>
 
-        <!-- Text -->
         <div class="hero-text">
             <div class="hospital-name">लकवा अस्पताल</div>
             <div class="doctor-name">डॉ. चंदन कुमार</div>
             <div class="doctor-qual">
-                M.B.E.H (Patna) – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना एवं न्यूरो समस्याओं की विशेष देखरेख 24 घंटे उपलब्ध
-            </div>
-
-            <p class="hero-sub">
-                लकवा तथा नसों से सम्बंधित रोगों के लिए विशेषज्ञ उपचार उपलब्ध,
-                ओबरा एवं आस-पास के क्षेत्रों के मरीजों के लिए 24×7 सुविधा।
-            </p>
-
-            <div class="hero-badges">
-                <span>✔️विशेष लकवा उपचार</span>
-                <span>✔️नसों की कमजोरी</span>
-                <span>✔️आपातकालीन सुविधाएँ</span>
-            </div>
-
-            <div class="hero-actions">
-                <button class="btn-primary" onclick="callNow()">📞 अभी कॉल करें</button>
-                <button class="btn-outline" onclick="scrollToAppointment()">📝 ऑनलाइन अपॉइंटमेंट बुक करें</button>
+                M.B.E.H (Patna) – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना एवं न्यूरो सम्बंधित बीमारियों की विशेष देखरेख 24 घंटे उपलब्ध।
             </div>
         </div>
+
+        <div class="hero-actions">
+            <button class="btn-primary" onclick="callNow()">📞 अपॉइंटमेंट के लिए कॉल करें</button>
+            <button class="btn-outline" onclick="scrollToAppointment()">📩 ऑनलाइन अपॉइंटमेंट बुक करें</button>
+        </div>
+
     </div>
 </section>
 
 <!-- STATS -->
-<main>
 <section class="card stats-card">
     <div class="stats-grid">
-
         <div class="stat-box">
             <div class="stat-icon">👨‍⚕️</div>
             <div class="stat-number">10+</div>
@@ -131,97 +84,80 @@
         </div>
 
         <div class="stat-box">
-            <div class="stat-icon">⏱️</div>
+            <div class="stat-icon">⏰</div>
             <div class="stat-number">24×7</div>
             <div class="stat-label">आपातकालीन सेवा</div>
         </div>
-
     </div>
 </section>
 
-<!-- Wide Hospital Photos -->
+<!-- HOSPITAL WIDE PHOTOS -->
 <section class="card facility-strip">
-    <h2 class="section-title">हमारी चिकित्सा एवं सुविधा</h2>
-
-    <p class="facility-text">
-        अत्याधुनिक सुविधा, प्रशिक्षित स्टाफ, और इलाज हेतु साफ-सुथरा वातावरण उपलब्ध।
-    </p>
+    <h2 class="section-title">हमारी चिकित्सा एवं सुविधाएं</h2>
+    <p class="facility-text">अत्याधुनिक सुविधा, योग्य डॉक्टर, और तेज़ उपचार हेतु साफ-सुथरा वातानुकूल उपचार कक्ष।</p>
 
     <div class="facility-photos">
 
         <div class="facility-item">
-            <img src="IMG_20251201_114319.jpg" alt="अस्पताल का बाहरी दृश्य" />
-            <span>अस्पताल बाहरी दृश्य</span>
+            <img src="IMG_20251201_114319.jpg" alt="अस्पताल का बाहरी प्रवेश द्वार" />
+            <span>अस्पताल का बाहरी दृश्य</span>
         </div>
 
         <div class="facility-item">
-            <img src="IMG_20251201_114316.jpg" alt="क्लिनिक के अंदर दवाओं की अलमारी" />
-            <span>क्लिनिक अंदर दवाइयाँ</span>
+            <img src="IMG_20251201_114316.jpg" alt="क्लिनिक के अंदर दवाई की अलमारी" />
+            <span>क्लिनिक का अंदरूनी दृश्य</span>
         </div>
 
         <div class="facility-item">
-            <img src="IMG_20251201_114256.jpg" alt="क्लिनिक के अंदर टेबल और कुर्सी" />
-            <span>क्लिनिक कमरा</span>
+            <img src="IMG_20251201_114256.jpg" alt="डॉक्टर का टेबल और कुर्सी" />
+            <span>डॉक्टर का कक्ष</span>
         </div>
 
     </div>
 </section>
 
-<!-- Contact + Appointment + Map -->
+<!-- CONTACT + MAP -->
 <section class="two-col">
 
     <!-- LEFT -->
     <div class="card" id="contact-us">
         <h2 class="section-title">Contact Us / ऑनलाइन अपॉइंटमेंट</h2>
 
-        <div class="contact-info">
-            <p><strong>पता:</strong> अशोक कॉलोनी के ठीक सामने, NH-139, नवजीवन पानी टंकी, ओबरा, बिहार - 824124</p>
+        <p><strong>पता:</strong> अशोक कॉलोनी के ठीक सामने, NH-139, नवजीवन पानी टंकी, ओबरा, औरंगाबाद, बिहार - 824124</p>
+        <p>
+            <strong>मोबाइल:</strong>
+            <a href="tel:+919771737437" class="highlight-phone">+91 97717 37437</a>,
+            <a href="tel:+918210660911" class="highlight-phone">+91 82106 06911</a>
+        </p>
 
-            <p><strong>मोबाइल:</strong>
-                <a href="tel:+919771737437" class="highlight-phone">+91 97717 37437</a>,
-                <a href="tel:+918210606911" class="highlight-phone">+91 82106 06911</a>
-            </p>
-
-            <p class="small-note">
-                कॉल करने में समस्या हो तो नीचे दिया फॉर्म भरें।
-            </p>
-        </div>
-
-        <!-- Form -->
         <form id="appointmentForm">
-            <label for="name">मरीज का नाम</label>
-            <input id="name" name="name" type="text" required placeholder="मरीज का नाम" />
+            <label for="name">👤 आपका नाम</label>
+            <input id="name" name="name" type="text" required placeholder="अपना नाम दर्ज करें" />
 
-            <label for="phone">मोबाइल नंबर</label>
+            <label for="phone">📞 मोबाइल नंबर</label>
             <input id="phone" name="phone" type="tel" required placeholder="10 अंकों का मोबाइल नंबर" />
 
-            <label for="date">पसंदीदा तिथि</label>
+            <label for="date">📅 पसंदीदा तिथि</label>
             <input id="date" name="date" type="date" />
 
-            <label for="problem">समस्या</label>
-            <textarea id="problem" name="problem" placeholder="समस्या लिखें..."></textarea>
+            <label for="problem">📝 समस्या</label>
+            <textarea id="problem" name="problem" placeholder="आपकी समस्या (जैसे – लकवा, नसों की कमजोरी, दर्द आदि)"></textarea>
 
-            <button type="submit" class="btn-submit">📩 अपॉइंटमेंट भेजें</button>
+            <button type="submit" class="btn-submit">📨 अपॉइंटमेंट भेजें</button>
         </form>
-
-        <p class="small-note">📞 फॉर्म भरने के बाद आपको कॉल किया जाएगा।</p>
     </div>
 
-    <!-- RIGHT: Google Map -->
+    <!-- RIGHT -->
     <div class="card">
         <h2 class="section-title">हमारा स्थान (Google Map)</h2>
 
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3621.345!2d84.38!3d24.74!2m3!1f0!2f0!3f0!3m2!1i1!2i1!4f13.1!3m3!1m2!1s0x0%3A0x0!2z24.74N!84.38E!5e0"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3621.345!2d84.381!3d24.734!2m3!1f0!2f0!3f0!3m2!1i0!2i0!4f13.1!3m3!1m2!1s0x390d050b9c432b!2sObra%2C%20Aurangabad%20Bihar!5e0!3m2!1sen!2sin!4v1700000000000"
             loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-        <p class="small-note">
-            स्थान पता: <strong>अशोक कॉलोनी के ठीक सामने, NH-139, ओबरा, बिहार</strong>
-        </p>
+        <p class="small-note"><strong>पता:</strong> अशोक कॉलोनी के ठीक सामने, NH-139, ओबरा, बिहार - 824124</p>
     </div>
-
 </section>
 
 <!-- ABOUT US -->
@@ -229,24 +165,19 @@
     <h2 class="section-title">About Us - हमारा अस्पताल</h2>
 
     <p class="about-text">
-        हमारा अस्पताल <strong>लकवा (पैरालिसिस), नसों की समस्या, चक्कर आना, हाथ-पैर सुन्न होना, कमजोरी, दर्द आदि</strong>
-        से सम्बंधित विशेषज्ञ उपचार प्रदान करता है।
-    </p>
-
-    <p class="about-text">
-        मरीजों को व्यक्तिगत देखभाल, पूर्ण गोपनीयता, एवं आधुनिक उपकरणों से उपचार प्रदान किया जाता है।
-        हमारे अस्पताल को विशेषज्ञ डॉक्टर एवं प्रशिक्षित स्टाफ 24×7 उपलब्ध रखते हैं।
+        हमारा अस्पताल लकवा (पैरालिसिस), नसों की समस्या, चक्कर आना, हाथ-पैर सुन्न होना, कमजोरी, दर्द आदि
+        से संबंधित विशेष उपचार प्रदान करता है।
     </p>
 
     <div class="pill-list">
-        <span class="pill">✔️ लकवा एवं नसों की समस्या का विशेषज्ञ उपचार</span>
-        <span class="pill">✔️ आधुनिक उपकरण एवं दवाइयाँ उपलब्ध</span>
+        <span class="pill">✔️ लकवा एवं नसों की विशेष उपचार</span>
+        <span class="pill">✔️ आधुनिक मशीनें एवं सेवाएं</span>
         <span class="pill">✔️ आपातकालीन सेवा 24×7</span>
-        <span class="pill">✔️ प्रशिक्षित एवं अनुभवी स्टाफ</span>
+        <span class="pill">✔️ योग्य एवं अनुभवी डॉक्टर</span>
     </div>
 </section>
 
-<!-- GALLERY -->
+<!-- PHOTO GALLERY -->
 <section class="card">
     <h2 class="section-title">अस्पताल फोटो गैलरी</h2>
 
@@ -254,24 +185,20 @@
 
         <div class="gallery-item">
             <img src="IMG_20251201_114319.jpg" alt="अस्पताल का बाहरी प्रवेश द्वार" />
-            <div class="gallery-caption">अस्पताल प्रवेश</div>
+            <div class="gallery-caption">अस्पताल का बाहरी प्रवेश द्वार</div>
         </div>
 
         <div class="gallery-item">
-            <img src="IMG_20251201_114256.jpg" alt="क्लिनिक के अंदर टेबल और कुर्सी" />
-            <div class="gallery-caption">क्लिनिक कमरा</div>
+            <img src="IMG_20251201_114316.jpg" alt="क्लिनिक के अंदर का दृश्य" />
+            <div class="gallery-caption">क्लिनिक का अंदरूनी दृश्य</div>
         </div>
 
         <div class="gallery-item">
-            <img src="IMG_20251201_114316.jpg" alt="क्लिनिक के अंदर दवाओं की अलमारी" />
-            <div class="gallery-caption">दवाओं की अलमारी</div>
+            <img src="IMG_20251201_114258.jpg" alt="डॉक्टर का कक्ष" />
+            <div class="gallery-caption">डॉक्टर का कक्ष</div>
         </div>
 
     </div>
-
-    <p class="gallery-note">
-        ये सभी फोटो वास्तविक <strong>लकवा अस्पताल, ओबरा</strong> से लिए गए हैं।
-    </p>
 </section>
 
 <!-- PRIVACY POLICY -->
@@ -279,57 +206,24 @@
     <h2 class="section-title">Privacy Policy (गोपनीयता नीति)</h2>
 
     <p class="about-text">
-        हम आपके डाटा को सुरक्षित रखते हैं और आपकी जानकारी का उपयोग केवल अपॉइंटमेंट एवं संपर्क के उद्देश्य से करते हैं।
-    </p>
-
-    <p class="about-text">
-        आपकी जानकारी किसी भी तीसरे पक्ष के साथ साझा नहीं की जाती है।
+        हम आपकी व्यक्तिगत जानकारी सुरक्षित रखते हैं और आपकी जानकारी का उपयोग केवल अपॉइंटमेंट एवं संपर्क के उद्देश्य से करते हैं।
+        आपकी जानकारी किसी तीसरे पक्ष के साथ साझा नहीं की जाती।
     </p>
 </section>
 
 <!-- DISCLAIMER -->
 <section class="card" id="disclaimer">
     <h2 class="section-title">Disclaimer (अस्वीकरण)</h2>
+
     <p class="about-text">
-        इस वेबसाइट की जानकारी केवल सामान्य जानकारी हेतु है। किसी भी स्वास्थ्य समस्या के लिए डॉक्टर की सलाह आवश्यक है।
+        यह वेबसाइट केवल जानकारी प्रदान करने के उद्देश्य से है। किसी भी प्रकार की उपचार संबंधित सलाह के लिए डॉक्टर से संपर्क करें।
     </p>
 </section>
 
-</main>
-
 <!-- FOOTER -->
 <footer>
-    <div class="footer-top">
-
-        <div class="footer-block">
-            <h3>📍पता:</h3>
-            <p>अशोक कॉलोनी के ठीक सामने, NH-139, नवजीवन पानी टंकी, ओबरा, बिहार - 824124</p>
-        </div>
-
-        <div class="footer-block">
-            <h3>📞 फ़ोन नंबर:</h3>
-            <p>
-                <a href="tel:+919771737437">+91 97717 37437</a> |
-                <a href="tel:+918210606911">+91 82106 06911</a>
-            </p>
-        </div>
-
-        <div class="footer-block">
-            <h3>⏱️ऑपरेशन समय</h3>
-            <p>सुबह 8 बजे - रात 8 बजे</p>
-            <p>आपातकालीन सेवा: 24×7 उपलब्ध</p>
-        </div>
-    </div>
-
     <div class="footer-bottom">
-        <p class="footer-links">
-            <a href="#about-us">About Us</a> |
-            <a href="#contact-us">Contact Us</a> |
-            <a href="#privacy-policy">Privacy Policy</a> |
-            <a href="#disclaimer">Disclaimer</a>
-        </p>
-
-        <p>© 2025 लकवा अस्पताल, सर्वाधिकार सुरक्षित</p>
+        <p>© 2025 लकवा अस्पताल, सर्वाधिकार सुरक्षित।</p>
         <p class="designed-by">Designed & Developed by <span>Prince Kumar</span></p>
     </div>
 </footer>
